# envsetup-rl

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
envsetup_rl/: hparams_entrypoint.py  upload_hf_checkpoint.py
envsetup_rl/config/: __init__.py  config_resolvers.py  envbench-graphs.yaml
envsetup_rl/config/_custom/: universal_all_to_s3.yaml
envsetup_rl/config/algorithm/: rpp.yaml
envsetup_rl/config/data/: local-envbench.yaml
envsetup_rl/config/experiment/: fine-grained.yaml  llm-reward.yaml  shellcheck.yaml
envsetup_rl/config/langgraph/: feedback-loop.yaml  single-turn-loop.yaml
envsetup_rl/config/lr/: constant-5e-6.yaml  cosine-3e-6.yaml  cosine-5e-6.yaml
envsetup_rl/config/model/: custom-qwen3-8b.yaml
envsetup_rl/config/reward/: fine-grained.yaml  llm-reward.yaml  strict-shellcheck.yaml
envsetup_rl/config/thinking/: qwen3-no-thinking.yaml
envsetup_rl/data_preprocess/: envbench.py
envsetup_rl/multi_turn/: langgraph_chat_scheduler.py  postprocess_multi_turn_output.py
envsetup_rl/multi_turn/tools/: readonly.py  shellcheck.py
envsetup_rl/reward_manager/: messages_batch.py
envsetup_rl/reward_score/: reward_helper_fns.py
envsetup_rl/reward_score/envsetup/: llm_reward.py  llm_sandbox_reward.py  shellcheck.py  utils.py
envsetup_rl/reward_score/envsetup/fine_grained/: config_parsers.py  constants.py  graph.py  reward.py
envsetup_rl/trainer/: multi_turn_main_ppo.py
envsetup_rl/trainer/ppo/: core_algos.py  custom_eval_ray_trainer.py  metric_utils.py  ray_trainer_multi_turn.py  reward.py
(+10 files in other folders)
